index software title alignment bug at larger desktop sizes fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,6 +40,10 @@ h4 {
   text-align: center;
 }
 
+p {
+  text-align: center;
+}
+
 button {
   display: flex;
   flex-wrap: wrap;
@@ -589,6 +593,7 @@ button:hover {
 
   .my-software__heading h2 {
     text-align: center;
+    right: 0;
   }
 
   .my-software__heading br {
